Phân quyền manager
